force-app/main/default/objects/Appointment_Notification_Event__e/Appointment_Notification_Event__e.object-meta.xml
<CustomObject>
    <description>This platform event is used to send email notifications to the customer whenever an appointment is booked or cancelled.</description>
    <label>Appointment Notification Event</label>
    <pluralLabel>Appointment Notification Events</pluralLabel>
</CustomObject>