force-app/main/default/objects/Appointment_Notification_Event__e/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <description>Date and time of the appointment</description>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>