force-app/main/default/objects/Appointment_Notification_Event__e/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration of the appointment in minutes</description>
    <label>Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>