force-app/main/default/objects/Appointment_Notification_Event__e/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <description>Template ID of the email to be sent</description>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>