force-app/main/default/objects/Appointment_Notification_Event__e/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First Name of the customer</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>