force-app/main/default/objects/Appointment_Notification_Event__e/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of the appointment</description>
    <label>Location</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>