force-app/main/default/objects/Appointment_Notification_Event__e/fields/Preferred_Channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Channel__c</fullName>
    <description>Contact type in the template</description>
    <label>Preferred Channel</label>
    <length>30</length>
    <type>Text</type>
</CustomField>